--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -198,3 +198,24 @@ i [epub|type~="z3998:persona"]{
 [epub|type~="epigraph"] [epub|type~="z3998:persona"]{
 	font-style: normal;
 }
+
+/* illustrations */
+figure{
+	break-inside: avoid;
+}
+
+figure img{
+	display: block;
+	margin: auto;
+	max-width: 100%;
+}
+
+figcaption{
+	font-size: .75em;
+	font-style: italic;
+	margin: 1em;
+}
+
+figcaption p + p{
+	text-indent: 0;
+}
