--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -19,10 +19,14 @@ blockquote header{
 	text-indent: 0;
 }
 
-#chapter-1 > blockquote p{
+#chapter-1 > blockquote:first-of-type p{
 	font-variant: small-caps;
 	text-align: center;
 	text-indent: 0;
+}
+
+#chapter-17 div header p{
+	font-variant: small-caps;
 }
 
 /* All epigraphs */
