Use relative font sizes

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -2,7 +2,7 @@
 @namespace epub "http://www.idpf.org/2007/ops";
 
 #prologue{
-	margin-top: 20vh; /* I added this because lint asked me to, but...? */
+	margin-top: 20vh;
 }
 
 #introduction p{
@@ -12,7 +12,7 @@
 }
 
 #introduction p b{
-	font-size: 1.25em;
+	font-size: larger;
 }
 
 blockquote header{
