--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,6 +1,10 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
+.telegram{
+	font-variant: all-small-caps;
+}
+
 #prologue{
 	margin-top: 20vh;
 }
