--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -203,11 +203,13 @@ table[epub|type~="z3998:drama"]{
 /* illustrations */
 figure{
 	break-inside: avoid;
+	margin: 1em 2.5em;
 }
 
 figure img{
 	display: block;
 	margin: auto;
+	max-height: 100vh;
 	max-width: 100%;
 }
 
